include $(top_srcdir)/config/include-Makefile.am

dist_noinst_HEADERS = \
	at.h \
	bitops.h \
	blkdev.h \
	canonicalize.h \
	carefulputc.h \
	c.h \
	cpuset.h \
	crc32.h \
	env.h \
	fsprobe.h \
	ismounted.h \
	linux_reboot.h \
	linux_version.h \
	list.h \
	mangle.h \
	mbsalign.h \
	md5.h \
	nls.h \
	pathnames.h \
	setproctitle.h \
	strutils.h \
	swapheader.h \
	tt.h \
	usleep.h \
	wholedisk.h \
	widechar.h \
	writeall.h \
	rpmatch.h \
	xalloc.h
