include $(top_srcdir)/config/include-Makefile.am

dist_noinst_HEADERS = \
	at.h \
	bitops.h \
	blkdev.h \
	c.h \
	canonicalize.h \
	carefulputc.h \
	cpuset.h \
	crc32.h \
	env.h \
	exitcodes.h \
	fileutils.h \
	fsprobe.h \
	ismounted.h \
	linux_reboot.h \
	linux_version.h \
	list.h \
	loopdev.h \
	mangle.h \
	match.h \
	mbsalign.h \
	md5.h \
	minix.h \
	nls.h \
	optutils.h \
	pamfail.h \
	path.h \
	pathnames.h \
	procutils.h \
	rpmatch.h \
	setproctitle.h \
	strutils.h \
	swapheader.h \
	sysfs.h \
	tt.h \
	usleep.h \
	wholedisk.h \
	widechar.h \
	writeall.h \
	xalloc.h \
	xgetpass.h
